--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /.vs/Deneme_proje/FileContentIndex/deeb49ba-d776-40c9-bae8-d0319b831181.vsidx
 /.vs/Deneme_proje/FileContentIndex/4e98967c-6abf-479d-a664-26a0d9c5dc2d.vsidx
 /.vs/Deneme_proje/FileContentIndex/5565e6a6-b40e-46eb-aa60-814ba3995b7f.vsidx
+/.vs/Deneme_proje/FileContentIndex
